cluster/diyhue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    metallb.universe.tf/address-pool: server
    metallb.universe.tf/allow-shared-ip: diyhue-svc
    io.kompose.service: diyhue
  name: diyhue
  namespace: diyhue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: diyhue
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        metallb.universe.tf/address-pool: server
        metallb.universe.tf/allow-shared-ip: diyhue-svc
        io.kompose.network/diyhue: "true"
        io.kompose.service: diyhue
    spec:
      containers:
        - image: diyhue/core
#          args: ["/opt/hue-emulator/HueEmulator3.py --ip 192.168.42.26"]
          name: diyhue
          ports:
            - containerPort: 80
#              hostIP: 192.168.42.26
#              loadBalancerIP: 192.168.42.26
#              hostPort: 80
            - containerPort: 443
#              hostIP: 192.168.42.26
#              hostPort: 443
            - containerPort: 1900
#              hostIP: 192.168.42.26
#              hostPort: 1900
              protocol: UDP
            - containerPort: 2100
#              hostIP: 192.168.42.26
#              hostPort: 2100
              protocol: UDP
          resources: 
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /opt/hue-emulator/export/
              name: diyhue-pvc
            - mountPath: /opt/hue-emulator/config/
              name: diyhue-config-pvc
      restartPolicy: Always
      hostNetwork: false
      volumes:
        - name: diyhue-pvc
          persistentVolumeClaim:
            claimName: diyhue-pvc
        - name: diyhue-config-pvc
          persistentVolumeClaim:
            claimName: diyhue-config-pvc
