cluster/diyhue/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: diyhue
  name: diyhue
  namespace: diyhue
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 7080
    - name: "443"
      port: 443
      targetPort: 7443
    - name: "1900"
      port: 1900
      protocol: UDP
      targetPort: 1900
    - name: "2100"
      port: 2100
      protocol: UDP
      targetPort: 2100
  selector:
    io.kompose.service: diyhue
  type: LoadBalancer
  loadBalancerIP: 192.168.42.26
